--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: ruby
 rvm:
   - 2.2.1
+  - 2.1.1
+  - 1.9.3
+
 before_install: gem install bundler -v 1.10.6
+script: bundle exec rake test
